--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/mniehe/graphql-stats.git"
+  },
+  "homepage": "https://github.com/mniehe/graphql-stats",
   "devDependencies": {
     "@types/node": "^12.0.0",
     "tslint-config-airbnb": "^5.11.1",
